trying to fix siema on mobile 11

--- a/src/components/section-categories/categories-styles/category.css
+++ b/src/components/section-categories/categories-styles/category.css
@@ -49,7 +49,8 @@
 .things-item {
   -ms-touch-action: pan-y;
   touch-action: pan-y;
-  width: 280px;
+  /* width: 280px; */
+  width: 100%;
   height: 305px;
   padding: 20px 0px;
   cursor: pointer;
